Add the google cloud library dependency

--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>alfresco-gcs-connector</groupId>
-  <artifactId>alfresco-gcs-connector</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+   <modelVersion>4.0.0</modelVersion>
+   <groupId>com.mintel</groupId>
+   <artifactId>alfresco-gcs-connector</artifactId>
+   <version>0.0.1-SNAPSHOT</version>
+
+   <dependencies>
+      <dependency>
+         <groupId>com.google.cloud</groupId>
+         <artifactId>google-cloud-storage</artifactId>
+         <version>1.73.0</version>
+      </dependency>
+   </dependencies>
+
+   <build>
+      <sourceDirectory>src</sourceDirectory>
+      <plugins>
+         <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.0</version>
+            <configuration>
+               <source>1.8</source>
+               <target>1.8</target>
+            </configuration>
+         </plugin>
+      </plugins>
+   </build>
 </project>
