Beans and other config

--- a/src/main/resources/alfresco/module/alfresco-gcs-connector/alfresco-global.properties
+++ b/src/main/resources/alfresco/module/alfresco-gcs-connector/alfresco-global.properties
@@ -2,3 +2,7 @@
 # GCS Connector default properties #
 ####################################
 
+# The gpg file name stored in shared/classes/alfresco/extension/google-cloud-storage
+gcs.keyFileName=name.gpg
+# The bucket to use
+gcs.bucketName=bucket
