--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
    </dependencies>
 
    <build>
-      <sourceDirectory>src</sourceDirectory>
+      <sourceDirectory>src/main/java</sourceDirectory>
       <plugins>
          <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
@@ -43,5 +43,13 @@
             </configuration>
          </plugin>
       </plugins>
+      <resources>
+         <resource>
+            <directory>src/main/resources</directory>
+         </resource>
+      </resources>
    </build>
+
+
+
 </project>
