--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,18 @@
          <version>${alfresco.version}</version>
          <scope>provided</scope>
       </dependency>
+
+      <dependency>
+         <groupId>com.google.guava</groupId>
+         <artifactId>guava</artifactId>
+         <version>27.0.1-jre</version>
+      </dependency>
+
+      <dependency>
+         <groupId>log4j</groupId>
+         <artifactId>log4j</artifactId>
+         <version>1.2.17</version>
+      </dependency>
    </dependencies>
 
    <build>
