--- a/src/main/resources/alfresco/module/alfresco-gcs-connector/alfresco-global.properties
+++ b/src/main/resources/alfresco/module/alfresco-gcs-connector/alfresco-global.properties
@@ -3,6 +3,6 @@
 ####################################
 
 # The gpg file name stored in shared/classes/alfresco/extension/google-cloud-storage
-gcs.keyFileName=name.gpg
+gcs.keyFileName=key.json
 # The bucket to use
 gcs.bucketName=bucket
