CMS-8729 Deleted bucket should be able to have it's own credentials

--- a/src/main/resources/alfresco/module/alfresco-gcs-connector/alfresco-global.properties
+++ b/src/main/resources/alfresco/module/alfresco-gcs-connector/alfresco-global.properties
@@ -4,6 +4,12 @@
 
 # The gpg file name stored in shared/classes/alfresco/extension/google-cloud-storage
 gcs.keyFileName=key.json
+gcs.keyFileName.deleted=${gcs.keyFileName}
+
 # The bucket to use
 gcs.bucketName=bucket
 gcs.bucketName.deleted=${gcs.bucketName}
+
+#path in bucket e.g.: contenstore will store objects in gcs://contenststore/2019/...
+gcs.dir.contentstore=${dir.contentstore}
+gcs.dir.contentstore.deleted=${dir.contentstore}
