CMS-9478 S3 and GCS connectors don't work properly without local contentCache
Use temporary file to guess mimetype instead of trying to catch file
from objectstorage

--- a/src/main/resources/alfresco/module/alfresco-gcs-connector/alfresco-global.properties
+++ b/src/main/resources/alfresco/module/alfresco-gcs-connector/alfresco-global.properties
@@ -16,7 +16,7 @@ gcs.bucketName.deleted=${gcs.bucketName}
 
 #path in bucket e.g.: contenstore will store objects in gcs://contenststore/2019/...
 gcs.dir.contentstore=${dir.contentstore}
-gcs.dir.contentstore.deleted=${dir.contentstore}
+gcs.dir.contentstore.deleted=${dir.contentstore.deleted}
 
 dir.cachedcontent=/path/to/cache
 dir.root=/path/to/local
