--- a/src/main/resources/alfresco/module/alfresco-gcs-connector/alfresco-global.properties
+++ b/src/main/resources/alfresco/module/alfresco-gcs-connector/alfresco-global.properties
@@ -2,8 +2,12 @@
 # GCS Connector default properties #
 ####################################
 
-# The gpg file name stored in shared/classes/alfresco/extension/google-cloud-storage
+# The gpg file path and name
+gcs.keyPath=alfresco/extension/google-cloud-storage/
 gcs.keyFileName=key.json
+
+# The gpg file path and name for the deleted contenstore
+gcs.keyPath.deleted=alfresco/extension/google-cloud-storage/
 gcs.keyFileName.deleted=${gcs.keyFileName}
 
 # The bucket to use
@@ -13,3 +17,33 @@ gcs.bucketName.deleted=${gcs.bucketName}
 #path in bucket e.g.: contenstore will store objects in gcs://contenststore/2019/...
 gcs.dir.contentstore=${dir.contentstore}
 gcs.dir.contentstore.deleted=${dir.contentstore}
+
+dir.cachedcontent=/path/to/cache
+dir.root=/path/to/local
+
+##############################
+# Caching default properties #
+##############################
+
+system.content.caching.cacheOnInbound=true
+system.content.caching.maxUsageMB=4096
+# maxFileSizeMB - 0 means no max file size.
+system.content.caching.maxFileSizeMB=0
+# When the CachingContentStore is about to write a cache file but the disk usage is in excess of panicThresholdPct
+# (default 90%) then the cache file is not written and the cleaner is started (if not already running) in a new thread.
+system.content.caching.panicThresholdPct=90
+# When a cache file has been written that results in cleanThresholdPct (default 80%) of maxUsageBytes
+# being exceeded then the cached content cleaner is invoked (if not already running) in a new thread.
+system.content.caching.cleanThresholdPct=80
+# An aggressive cleaner is run till the targetUsagePct (default 70%) of maxUsageBytes is achieved
+system.content.caching.targetUsagePct=70
+# Threshold in seconds indicating a minimal gap between normal cleanup starts
+system.content.caching.normalCleanThresholdSec=0
+system.content.caching.minFileAgeInMillis=2000
+system.content.caching.maxDeleteWatchCount=1
+# Clean up every day at 3 am
+system.content.caching.contentCleanup.cronExpression=0 0 3 * * ?
+system.content.caching.timeToLiveSeconds=0
+system.content.caching.timeToIdleSeconds=60
+system.content.caching.maxElementsInMemory=5000
+system.content.caching.maxElementsOnDisk=10000
