CMS-8729 Make bucket configurable with an environment variable

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,9 +14,8 @@ services:
       context: ../../../target
     environment:
       CATALINA_OPTS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=0.0.0.0:8888
-        -Dgcs.bucketName=***REMOVED***
-        -Dgcs.bucketName.deleted=***REMOVED***
-        -Dgcs.keyFileName=***REMOVED***"
+        -Dgcs.bucketName=${BUCKET_NAME}
+        -Dgcs.keyFileName=key.json"
     ports:
       - "${acs.port}:8080"
       - "${acs.debug.port}:8888"
